client/app/css/main.css
/* ... */
#StepAddBox,
#StepsEditBox,
#FieldsEditBox,
#ContextAdvancedSettingsBox,
#SubstateEditBox {
  margin-top: 0.5em;
}

.addField,
.addFieldFromTemplate {
  clear: both;
  margin-bottom: 0.5em;
}

.field {
  position: relative;
  border: 1px solid #c8d1e0;
  margin-bottom: 0.5em;
}

.fieldOption {
  margin-bottom: 0.5em;
}

.selectionList {
  background-color: #f5f7fa;
  padding-top: 1em;
  padding-bottom: 1em;
  border: 1px solid #c8d1e0;
  list-style-type: none;
  overflow: auto;
  max-height: 8rem;
}

text.axis-workweek,
text.axis-worktime {
  fill: #1d1f24;
}

.disclaimer-text, .tos-text {
  display: block;
  padding: 1em;
  font-family: monospace;
  font-size: 0.8rem;
  max-height: 40em;
  max-width: 80rem;
  overflow-y: scroll;
  white-space: pre-wrap;
}

.tos-text {
  color: #1d1f24;
  background-color: #f5f7fa;
  border: 1px solid #c8d1e0;
  max-height: 20rem;
}

.non-default-language,
.disabled-icon {
  opacity: 0.2;
}

.non-default-language:hover {
  opacity: 1;
}

[dir="ltr"] .imageUpload .changePictureButton {
  left: 1rem;
}

[dir="rtl"] .imageUpload .changePictureButton {
  right: 1rem;
}

.tip-action-open {
  cursor: pointer;
}

.fieldAnswer {
  margin-bottom: 1em;
}

.TipLabel {
  color: #377abc;
}

.StepLabel {
  text-transform: capitalize;
}

#SearchFilter {
  margin: 0 0.5em;
}

#viewer {
  width: 100%;
}

.modal-xl {
  max-width: 90%;
}

html[dir="rtl"] input[type="email"],
html[dir="ltr"] input[type="email"],
html[dir="rtl"] #creditCard,
html[dir="ltr"] #creditCard,
html[dir="rtl"] #Receipt,
html[dir="ltr"] #Receipt {
  direction: ltr;
}

[dir="rtl"] .fa,
[dir="rtl"] .fa-solid {
  transform: scaleX(-1);
}

[dir="ltr"] #Sidebar .fa,
[dir="ltr"] #Sidebar .fa-solid {
  margin-right: 0.5em;
}

[dir="rtl"] #Sidebar .fa,
[dir="rtl"] #Sidebar .fa-solid {
  margin-left: 0.5em;
}

[dir] .collapse,
[dir] .navbar-collapse {
 height: auto !important;
}

[dir] .navbar {
  padding: 0;
}

.audio-box {
  position: relative;
  margin-top:10px;
  border: 1px solid #ddd;
  background-color: #f8f9fa;
  border-radius: 4px;
  padding:7px;
  padding-top:5px;
  padding-bottom:5px;
  padding-right:12px;
  display: flex;
  background:#f2f2f2;
  flex-direction: column;
  align-items: left;
  width: 350px;
}

.audio-box-danger {
  background-color: #ffe6e6;
}

hr {
  height: 2px;
  background-color: black;
  border: none;
  margin: 10px 0;
}

/* Edit mode styling */
.edit {
  color: #b4bccb !important
}

.svg-btn:hover svg g {
  fill: white;
}

.mode-svg {
  padding: 0px !important;
  margin: 0px !important;
  width: 20px;
}
.audio-player {
  background: #262626;
  padding: 2px;
  height:42px;
  border-radius: 50px;
  margin-left:2px;
  width: 100%;
  margin-top:10px;
  max-width:350px;
}

@media screen and (max-width:370px) {
  .audio-player{max-width: 300px;}
}

.audio-recorder {
  position: absolute;
  top: 5px;
  right: 3px;
  width: 10px;
  height: 10px;
  background-color: grey;
  border-radius: 50%;
}

.audio-recorder-active {
  position: absolute;
  top: 5px;
  right: 3px;
  width: 10px;
  height: 10px;
  background-color: red;
  border-radius: 50%;
}

.audio-btn-group {
  display: flex;
  position:relative;
  width:100%;
  justify-content: flex-start;
}

.audio-btn-group .btn {
  margin: 0 3px; /* Adjust the margin as per your preference */
  padding: 6px 15px; /* Adjust the padding as per your preference */
  font-size: 14px;
  line-height: 1.5;
  transition: all 0.3s;
}

.audio-btn-group .btn-primary {
  background-color: #007bff;
  border-color: #007bff;
}

.audio-btn-group .btn-primary:hover {
  background-color: #0069d9;
  border-color: #0062cc;
}

.btn-audio{
  color: #ccc;
  cursor: pointer;
}

.btn-audio:hover{
  color: #2866a2;
}

.btn.btn-audio[disabled]:hover {
  color: #ccc;
}

.btn.btn-audio:not([disabled]):hover {
  /* Your hover styles for the enabled button */
}

.btn-audio.active {
  color: #2866a2;
}

.btn-audio-enabled {
  color: #333;
}


.audio-player-wrapper[disabled]{
  cursor: not-allowed;
}
.audio-player-wrapper[disabled] .audio-player{
  opacity: 0.5;
  pointer-events: none;
}

